# PointLLM-demo

./: .gitignore  Dockerfile  README.md  app.sh  docker-compose.yaml  pyproject.toml
data/chosen/: 001.npy  002.npy  003.npy  004.npy
pointllm/eval/: PointLLM_chat.py  chat_gradio.py  chat_gradio_minimal.py
